# ConservedWaterSearch

./: .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  LICENSE  MANIFEST.in  README.rst  environment.yml  pyproject.toml  requirements-RTD.txt  requirements.txt  setup.py  validity.py
.github/: dependabot.yml
.github/workflows/: CI.yaml  environment.yml  publish-to-pypi.yml
.github/workflows/envs/: environment.yml
ConservedWaterSearch/: __init__.py  hydrogen_orientation.py  utils.py  water_clustering.py
conservedwatersearch/: hydrogen_orientation.py  utils.py
docs/: RTD-env.yml
docs/source/: ConservedWaterSearch.rst  HydrogenOrientationAnalysis.rst  Utilities.rst  WaterClustering.rst  citing.rst  conf.py  conservedwaters.rst  conservedwatersearch.rst  examples.rst  index.rst  installation.rst  introduction.rst  modules.rst  quickstart.rst
docs/source/figs/: FigWTnovi.eps
docs/source/references/: references.bib
requirements/: requirements-RTD.txt  requirements-nglview.txt  requirements-test.txt  requirements.txt
tests/: conftest.py  test_hydrogen_orientation.py  test_utils.py  test_water_clustering.py
